[package]
name = "d4-oxide"
version = "0.2.0"
description = "A Rust wrapper around d4."
edition = "2021"
build = "build.rs"
license = "LGPL-3.0-or-later"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
cxx = "1.0"
mt-kahypar-sys = "0.1"
gmp-mpfr-sys = { version = "1.6", default-features = false }

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
glob = "0.3"
pkg-config = "0.3"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
