[package]
name = "d4-oxide"
version = "0.4.0"
description = "A Rust wrapper around d4."
edition = "2021"
build = "build.rs"
license = "LGPL-3.0-or-later"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
cxx = { version = "1.0", features = ["c++17"] }
mt-kahypar-sys = "0.1"

[build-dependencies]
cxx-build = { version = "1.0", features = ["parallel"] }
glob = "0.3"
pkg-config = "0.3"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
