[package]
name = "d4-arjun-sys"
version = "0.1.1"
description = "A Rust wrapper around Arjun for d4."
edition = "2021"
build = "build.rs"
links = "arjun"
license = "MIT"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
d4-cryptominisat-sys = { version = "0.1", path = "../d4-cryptominisat-sys" }
gmp-mpfr-sys = "1.6"

[build-dependencies]
cmake = "0.1"
