[package]
name = "d4-cryptominisat-sys"
version = "0.1.0"
description = "A Rust wrapper around CryptoMiniSat for d4."
edition = "2021"
build = "build.rs"
links = "cryptominisat5"
license = "MIT"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
d4-cadiback-sys = { version = "0.1", path = "../d4-cadiback-sys" }
d4-cadical-sys = { version = "0.1", path = "../d4-cadical-sys" }

[build-dependencies]
cmake = "0.1"
