[package]
name = "d4-glucose-sys"
version = "0.1.2"
description = "A Rust wrapper around glucose for d4."
edition = "2021"
build = "build.rs"
links = "glucose"
license = "MIT"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
libz-sys = "1.1"

[build-dependencies]
cmake = "0.1"
