[package]
name = "d4-gmp-sys"
version = "0.1.0"
description = "A Rust wrapper around GMP for d4."
edition = "2021"
build = "build.rs"
links = "gmp"
license = "LGPL-3.0-only"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[build-dependencies]
autotools = "0.2"
