[package]
name = "d4-gpmc-sys"
version = "0.1.4"
description = "A Rust wrapper around GPMC for d4."
edition = "2021"
build = "build.rs"
links = "gpmc"
license = "MIT"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
d4-arjun-sys = { version = "0.1", path = "../d4-arjun-sys" }
d4-cryptominisat-sys = { version = "0.1", path = "../d4-cryptominisat-sys" }
d4-gmp-sys = { version = "0.1", path = "../d4-gmp-sys" }
d4-mpfr-sys = { version = "0.1", path = "../d4-mpfr-sys" }
libz-sys = "1.1"

[build-dependencies]
cmake = "0.1"
