[package]
name = "d4-mpfr-sys"
version = "0.1.0"
description = "A Rust wrapper around MPFR for d4."
edition = "2021"
build = "build.rs"
links = "mpfr"
license = "LGPL-3.0-only"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[dependencies]
d4-gmp-sys = { version = "0.1", path = "../d4-gmp-sys" }

[build-dependencies]
autotools = "0.2"
