[package]
name = "d4-mpfr-sys"
version = "0.1.2"
description = "A Rust wrapper around MPFR for d4."
edition = "2021"
build = "build.rs"
links = "mpfr"
license = "LGPL-3.0-only"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[build-dependencies]
pkg-config = "0.3"
