[package]
name = "d4-sbva-sys"
version = "0.1.2"
description = "A Rust wrapper around SBVA for d4."
edition = "2021"
build = "build.rs"
links = "sbva"
license = "MIT"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/SoftVarE-Group/d4-oxide"
repository = "https://github.com/SoftVarE-Group/d4-oxide.git"

[build-dependencies]
cmake = "0.1"
